src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__inline_for_indentation_enforcement.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31mprint[0m y

invalid indentation
| [4;31mprint[0m x, y

invalid indentation
| [4;31mprint[0m "---------"


