src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__inline_while_indentation_enforcement.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31mif[0m x != 46656: print "broken arithmetics"


