src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__loop_stmts-5.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Loop(
            For(
                For {
                    item: Ident(
                        "i",
                    ),
                    iter: Expr(
                        Call(
                            Call {
                                target: GetVar(
                                    GetVar {
                                        name: Ident(
                                            "iter",
                                        ),
                                    },
                                ),
                                args: [],
                            },
                        ),
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: Ident(
                        "i",
                    ),
                    iter: Expr(
                        Call(
                            Call {
                                target: GetVar(
                                    GetVar {
                                        name: Ident(
                                            "iter",
                                        ),
                                    },
                                ),
                                args: [],
                            },
                        ),
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: Ident(
                        "i",
                    ),
                    iter: Range(
                        IterRange {
                            start: Literal(
                                Int(
                                    0,
                                ),
                            ),
                            end: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            inclusive: false,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: Ident(
                        "i",
                    ),
                    iter: Range(
                        IterRange {
                            start: Literal(
                                Int(
                                    0,
                                ),
                            ),
                            end: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            inclusive: false,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: Ident(
                        "i",
                    ),
                    iter: Range(
                        IterRange {
                            start: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: Ident(
                                                "a",
                                            ),
                                        },
                                    ),
                                    args: [],
                                },
                            ),
                            end: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: Ident(
                                                "b",
                                            ),
                                        },
                                    ),
                                    args: [],
                                },
                            ),
                            inclusive: false,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: Ident(
                        "i",
                    ),
                    iter: Range(
                        IterRange {
                            start: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: Ident(
                                                "a",
                                            ),
                                        },
                                    ),
                                    args: [],
                                },
                            ),
                            end: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: Ident(
                                                "b",
                                            ),
                                        },
                                    ),
                                    args: [],
                                },
                            ),
                            inclusive: false,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: Ident(
                        "i",
                    ),
                    iter: Range(
                        IterRange {
                            start: Literal(
                                Int(
                                    0,
                                ),
                            ),
                            end: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            inclusive: true,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: Ident(
                        "i",
                    ),
                    iter: Range(
                        IterRange {
                            start: Literal(
                                Int(
                                    0,
                                ),
                            ),
                            end: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            inclusive: true,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: Ident(
                        "i",
                    ),
                    iter: Range(
                        IterRange {
                            start: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: Ident(
                                                "a",
                                            ),
                                        },
                                    ),
                                    args: [],
                                },
                            ),
                            end: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: Ident(
                                                "b",
                                            ),
                                        },
                                    ),
                                    args: [],
                                },
                            ),
                            inclusive: true,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: Ident(
                        "i",
                    ),
                    iter: Range(
                        IterRange {
                            start: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: Ident(
                                                "a",
                                            ),
                                        },
                                    ),
                                    args: [],
                                },
                            ),
                            end: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: Ident(
                                                "b",
                                            ),
                                        },
                                    ),
                                    args: [],
                                },
                            ),
                            inclusive: true,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
    ],
}
