src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__loop_stmts-6.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31mpass[0m


