src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__loop_stmts.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Loop(
            Infinite(
                Infinite {
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            Infinite(
                Infinite {
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
    ],
}
