src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__postfix_expr-2.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            GetField(
                GetField {
                    target: GetIndex(
                        GetIndex {
                            target: GetField(
                                GetField {
                                    target: GetVar(
                                        GetVar {
                                            name: Ident(
                                                "a",
                                            ),
                                        },
                                    ),
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                            key: GetVar(
                                GetVar {
                                    name: Ident(
                                        "c",
                                    ),
                                },
                            ),
                        },
                    ),
                    name: Ident(
                        "d",
                    ),
                },
            ),
        ),
        Expr(
            GetField(
                GetField {
                    target: GetIndex(
                        GetIndex {
                            target: GetField(
                                GetField {
                                    target: GetVar(
                                        GetVar {
                                            name: Ident(
                                                "a",
                                            ),
                                        },
                                    ),
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                            key: GetVar(
                                GetVar {
                                    name: Ident(
                                        "c",
                                    ),
                                },
                            ),
                        },
                    ),
                    name: Ident(
                        "d",
                    ),
                },
            ),
        ),
    ],
}
