src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__postfix_expr-3.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
unexpected token
| [4;31m.[0mb[c].d


