src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__postfix_expr.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
GetField(
    GetField {
        target: GetIndex(
            GetIndex {
                target: GetField(
                    GetField {
                        target: GetVar(
                            GetVar {
                                name: Ident(
                                    "a",
                                ),
                            },
                        ),
                        name: Ident(
                            "b",
                        ),
                    },
                ),
                key: GetVar(
                    GetVar {
                        name: Ident(
                            "c",
                        ),
                    },
                ),
            },
        ),
        name: Ident(
            "d",
        ),
    },
)
