src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__print_stmt-2.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31m"a"[0m


